# langchain-me

./: .env  LearnPydantic.py  Test.py  exercise1.py  main.py  pyproject.toml
